Fix OtherProjects horizontal scrolling bug.

--- a/styles/components/OtherProjects.module.scss
+++ b/styles/components/OtherProjects.module.scss
@@ -1,3 +1,7 @@
+.other-projects {
+  margin: 1em 0 1em 1em;
+}
+
 .other-header {
   margin: 5em 0 1.5em 0;
   font-weight: 300;
@@ -5,7 +9,6 @@
 }
 
 .opf-gallery {
-  width: 100vw;
   display: flex;
   flex-direction: row;
   overflow-x: auto;
